--- a/templates/placement/maintenance.html.twig
+++ b/templates/placement/maintenance.html.twig
@@ -3,15 +3,15 @@
 {% block title %}Maintenance{% endblock %}
 
 {% block content %}
-    <div class="panel panel-primary" id="repartitions" data-departments="{{ departments|json_encode }}">
-        <div class="panel-heading">Maintenance des répartitions</div>
-        <div class="panel-body">
+    <div class="card" id="repartitions" data-departments="{{ departments|json_encode }}">
+        <div class="card-header text-center bg-primary text-white">Maintenance des répartitions</div>
+        <div class="card-body">
             <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0"   aria-valuemin="0" aria-valuemax="100" style="width:0%">0 %</div>
             </div>
             <div class="info"></div>
         </div>
-        <div class="panel-footer">Aucune erreur</div>
+        <div class="card-footer">Aucune erreur</div>
     </div>
 {% endblock %}
 
@@ -23,11 +23,11 @@
             var count = 0, ongoing = 0, repartitions = 0;
             for (let d of departments) {
                 $.ajax({
-                    url: "{{ path('GCore_PARepartitionsDepartmentMaintenance') }}",
+                    url: "{{ path('GCore_PARepartitionsDepartmentMaintenance', {'slug': structure.slug}) }}",
                     method: "GET",
                     data: {department_id: d.id},
                     success: function(response) {
-                        $('#repartitions .info').text(d.id + ': ' + d.name);
+                        $('#repartitions .info').text(d.id + '. ' + d.name);
                         repartitions = repartitions + parseInt(response.message);
                         if (repartitions > 0)
                             $('#repartitions panel.heading').text('Maintenance des répartitions : ' + repartitions + ' répartitions ajoutées');
