--- a/templates/receipt/printPDF.html.twig
+++ b/templates/receipt/printPDF.html.twig
@@ -50,19 +50,21 @@
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
                     <div class="col-xs-12 blank">&nbsp;</div>
-                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %}, {{ receipt.structure.fullname }}{% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour {{ period }} en payant la somme de {{ (membership.amount/100)|number_format(2,',',' ') }}&#8239;€.</div>
+                    
+                    <div class="col-xs-12">Je, soussigné {{ receipt.person }}, {{ receipt.position }} de {{ receipt.structure.name }}{% if receipt.structure.fullname is not null %} ({{ receipt.structure.fullname }}){% endif %}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour {{ period }} en payant la somme de {{ (membership.amount/100)|number_format(2,',',' ') }}&#8239;€.</div>
+                
                     <div class="col-xs-12 blank">&nbsp;</div>
                     <div class="col-xs-12">
 
-                        <div class="float-right">
+                        <div class="pull-right">
                             <div class="title">Le {{ "now"|date('d/m/Y') }}</div>
                             <div><img src="{{ absolute_url(asset(vich_uploader_asset(receipt, 'imageFile'))) }}" alt="signature électronique" class="sign"></div>
                             <div>{{ receipt.person }}</div>
                         </div>
                     </div>
                 </div>
-                <div class="card-footer jumbotron row">
-                    <span class="float-right"><img src="{{ absolute_url(asset(vich_uploader_asset(membership.structure, 'logoFile'))) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></span>
+                <div class="card-footer">
+                    <img src="{{ absolute_url(asset(vich_uploader_asset(membership.structure, 'logoFile'))) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" />
                     {% if membership.structure.fullname is not null %}
                         {{ membership.structure.fullname }}
                     {% else %}
